--- a/Common Files/Extensions/CPUSensors.kext/Contents/Info.plist
+++ b/Common Files/Extensions/CPUSensors.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>13D12</string>
+	<string>13E28</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -15,11 +15,11 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>6.0.1152</string>
+	<string>6.9-2-g61a1759.1317</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1152</string>
+	<string>1317</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -80,7 +80,7 @@
 		<key>com.apple.kpi.unsupported</key>
 		<string>10.6</string>
 		<key>org.netkas.driver.FakeSMC</key>
-		<string>1065</string>
+		<string>1212</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Root</string>
