--- a/Common Files/Extensions/FakeSMC.kext/Contents/Info.plist
+++ b/Common Files/Extensions/FakeSMC.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>13D12</string>
+	<string>13E28</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>6.0.1152</string>
+	<string>6.9-2-g61a1759.1317</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1152</string>
+	<string>1317</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -200,7 +200,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2014 netkas. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
-	<string>1065</string>
+	<string>1212</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOACPIFamily</key>
