--- a/Common Files/Extensions/VoodooPS2Controller.kext/Contents/Info.plist
+++ b/Common Files/Extensions/VoodooPS2Controller.kext/Contents/Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>13C64</string>
+	<string>13E28</string>
 	<key>CFBundleExecutable</key>
 	<string>VoodooPS2Controller</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.8.11, Copyright Apple Computer, Inc. 2000-2003, David Elliot 2007, RehabMan 2012-2013</string>
+	<string>1.8.13, Copyright Apple Computer, Inc. 2000-2003, David Elliot 2007, RehabMan 2012-2013</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.rehabman.voodoo.driver.PS2Controller</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.8.11</string>
+	<string>1.8.13</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -102,17 +102,33 @@
 					<string>ProBook</string>
 					<key>17F6</key>
 					<string>ProBook</string>
+					<key>1942</key>
+					<string>ProBook</string>
+					<key>1949</key>
+					<string>ProBook</string>
+					<key>198F</key>
+					<string>ProBook</string>
 					<key>ProBook</key>
 					<dict>
 						<key>WakeDelay</key>
 						<integer>0</integer>
 					</dict>
 				</dict>
+				<key>Lenovo</key>
+				<dict>
+					<key>Haswell-Ideapad</key>
+					<dict>
+						<key>WakeDelay</key>
+						<integer>0</integer>
+					</dict>
+					<key>U430</key>
+					<string>Haswell-Ideapad</string>
+				</dict>
 			</dict>
 		</dict>
 	</dict>
 	<key>OSBundleCompatibleVersion</key>
-	<string>1.8.11</string>
+	<string>1.8.13</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOACPIFamily</key>
