--- a/Common Files/Extensions/CustomPeripheral.kext/Contents/Info.plist
+++ b/Common Files/Extensions/CustomPeripheral.kext/Contents/Info.plist
@@ -181,7 +181,7 @@
 			<key>idVendor</key>
 			<integer>3034</integer>
 		</dict>
-		<key>FHD Camera Device - Laptop_Integrated_Webcam_FHD 1bcf-280a</key>
+		<key>FHD1 Camera Device - Laptop_Integrated_Webcam_FHD 1bcf-280a</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -219,7 +219,7 @@
 			<key>idVendor</key>
 			<integer>7119</integer>
 		</dict>
-		<key>FHD Camera Interface A</key>
+		<key>FHD1 Camera Interface A</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -247,7 +247,7 @@
 			<key>idVendor</key>
 			<integer>7119</integer>
 		</dict>
-		<key>FHD Camera Interface B</key>
+		<key>FHD1 Camera Interface B</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -274,6 +274,100 @@
 			<integer>10250</integer>
 			<key>idVendor</key>
 			<integer>7119</integer>
+		</dict>
+		<key>FHD2 Camera Device - Laptop_Integrated_Webcam_FHD 408-2fb1</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.driver.AppleUSBMergeNub</string>
+			<key>IOClass</key>
+			<string>AppleUSBMergeNub</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBDevice</string>
+			<key>IOProviderMergeProperties</key>
+			<dict>
+				<key>USB Product Name</key>
+				<string>FaceTime HD Camera (Built-in)</string>
+				<key>USB Serial Number</key>
+				<string>DJHB2F000LDH7FL0</string>
+				<key>USB Vendor Name</key>
+				<string>Apple Inc.</string>
+				<key>bcdDevice</key>
+				<integer>1302</integer>
+				<key>iManufacturer</key>
+				<integer>1</integer>
+				<key>iProduct</key>
+				<integer>2</integer>
+				<key>iSerialNumber</key>
+				<integer>3</integer>
+				<key>idProduct</key>
+				<integer>34057</integer>
+				<key>idVendor</key>
+				<integer>1452</integer>
+				<key>kSuspendPort</key>
+				<true/>
+				<key>non-removable</key>
+				<string>yes</string>
+			</dict>
+			<key>idProduct</key>
+			<integer>12209</integer>
+			<key>idVendor</key>
+			<integer>1032</integer>
+		</dict>
+		<key>FHD2 Camera Interface A</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.driver.AppleUSBMergeNub</string>
+			<key>IOClass</key>
+			<string>AppleUSBMergeNub</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOProviderMergeProperties</key>
+			<dict>
+				<key>USB Interface Name</key>
+				<string>FaceTime HD Camera (Built-in)</string>
+				<key>bcdDevice</key>
+				<integer>1302</integer>
+				<key>idProduct</key>
+				<integer>34057</integer>
+				<key>idVendor</key>
+				<integer>1452</integer>
+			</dict>
+			<key>bConfigurationValue</key>
+			<string>*</string>
+			<key>bInterfaceNumber</key>
+			<integer>0</integer>
+			<key>idProduct</key>
+			<integer>12209</integer>
+			<key>idVendor</key>
+			<integer>1032</integer>
+		</dict>
+		<key>FHD2 Camera Interface B</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.driver.AppleUSBMergeNub</string>
+			<key>IOClass</key>
+			<string>AppleUSBMergeNub</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOProviderMergeProperties</key>
+			<dict>
+				<key>USB Interface Name</key>
+				<string>FaceTime HD Camera (Built-in)</string>
+				<key>bcdDevice</key>
+				<integer>1302</integer>
+				<key>idProduct</key>
+				<integer>34057</integer>
+				<key>idVendor</key>
+				<integer>1452</integer>
+			</dict>
+			<key>bConfigurationValue</key>
+			<string>*</string>
+			<key>bInterfaceNumber</key>
+			<integer>1</integer>
+			<key>idProduct</key>
+			<integer>12209</integer>
+			<key>idVendor</key>
+			<integer>1032</integer>
 		</dict>
 		<key>HD1 Camera Device - Laptop_Integrated_Webcam_HD 1bcf-2980</key>
 		<dict>
@@ -470,25 +564,24 @@
 			<key>HDAConfigDefault</key>
 			<array>
 				<dict>
-					<key>AFGLowPowerState</key>
-					<data>
-					AwAAAA==
-					</data>
 					<key>CodecID</key>
 					<integer>283902569</integer>
 					<key>ConfigData</key>
-					<data>
-					ASccEAEnHQEBJx6gAScfkAFHHEABRx0BAUce
-					EAFHH5ABdxzwAXcdAAF3HgABdx9AAYccIAGH
-					HTABhx6BAYcfAQGXHPABlx0AAZceAAGXH0AB
-					pxzwAacdAAGnHgABpx9AAbcc8AG3HQABtx4A
-					AbcfQAHXHPAB1x0AAdceAAHXH0AB5xzwAecd
-					AAHnHgAB5x9AAhccUAIXHUACFx4hAhcfAQ==
-					</data>
+					<data>ASccEAEnHQEBJx6gAScfkAFHHEABRx0BAUceEAFHH5ABdxzwAXcdAAF3HgABdx9AAYccIAGHHTABhx6BAYcfAQGXHPABlx0AAZceAAGXH0ABpxzwAacdAAGnHgABpx9AAbcc8AG3HQABtx4AAbcfQAHXHPAB1x0AAdceAAHXH0AB5xzwAecdAAHnHgAB5x9AAhccUAIXHUACFx4hAhcfAQ==</data>
 					<key>FuncGroup</key>
 					<integer>1</integer>
 					<key>LayoutID</key>
 					<integer>28</integer>
+				</dict>
+				<dict>
+					<key>CodecID</key>
+					<integer>283903589</integer>
+					<key>ConfigData</key>
+					<data>ASccEAEnHQEBJx6gAScfkAFXHCABVx0BAVceEAFXH5ABlxwwAZcdEAGXHiEBlx8BAaccHwGnHRABpx6BAacfAQG3HC8Btx0QAbceIQG3HwEB5xxAAecdEQHnHkUB5x8BAUcMAg==</data>
+					<key>FuncGroup</key>
+					<integer>1</integer>
+					<key>LayoutID</key>
+					<integer>65</integer>
 				</dict>
 			</array>
 			<key>IOClass</key>
