--- a/Clover/EFI/CLOVER/kexts/Other/CustomPeripheral.kext/Contents/Info.plist
+++ b/Clover/EFI/CLOVER/kexts/Other/CustomPeripheral.kext/Contents/Info.plist
@@ -18,170 +18,7 @@
 	<string>8.8.8</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>ACR Card Reader Device - Alcor USB 2.0 Card Reader 058f-6366</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>IOUSBDevice</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>USB Product Name</key>
-				<string>Internal Memory Card Reader</string>
-				<key>USB Serial Number</key>
-				<string>000000009833</string>
-				<key>USB Vendor Name</key>
-				<string>Apple</string>
-				<key>bcdDevice</key>
-				<integer>38963</integer>
-				<key>idProduct</key>
-				<integer>33795</integer>
-				<key>idVendor</key>
-				<integer>1452</integer>
-				<key>non-removable</key>
-				<string>yes</string>
-			</dict>
-			<key>idProduct</key>
-			<integer>25446</integer>
-			<key>idVendor</key>
-			<integer>1423</integer>
-		</dict>
-		<key>ACR Card Reader Inject - 2</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBCardReader</string>
-			<key>IOClass</key>
-			<string>com_apple_driver_AppleUSBCardReaderUMC</string>
-			<key>IOMediaIcon</key>
-			<dict>
-				<key>CFBundleIdentifier</key>
-				<string>com.apple.iokit.IOSCSIArchitectureModelFamily</string>
-				<key>IOBundleResourceFile</key>
-				<string>SD.icns</string>
-			</dict>
-			<key>IOProviderClass</key>
-			<string>IOUSBInterface</string>
-			<key>Physical Interconnect</key>
-			<string>USB</string>
-			<key>Physical Interconnect Location</key>
-			<string>Internal</string>
-			<key>Read Time Out Duration</key>
-			<string>30000</string>
-			<key>SCSI Device Characteristics</key>
-			<dict>
-				<key>IOMaximumBlockCountRead</key>
-				<integer>8192</integer>
-				<key>IOMaximumBlockCountWrite</key>
-				<integer>8192</integer>
-			</dict>
-			<key>Write Time Out Duration</key>
-			<string>30000</string>
-			<key>bConfigurationValue</key>
-			<integer>1</integer>
-			<key>bInterfaceNumber</key>
-			<integer>0</integer>
-			<key>idProduct</key>
-			<integer>25446</integer>
-			<key>idVendor</key>
-			<integer>1423</integer>
-		</dict>
-		<key>ACR Card Reader Interface - 2</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>IOUSBInterface</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>bcdDevice</key>
-				<integer>38963</integer>
-				<key>idProduct</key>
-				<integer>33795</integer>
-				<key>idVendor</key>
-				<integer>1452</integer>
-			</dict>
-			<key>bConfigurationValue</key>
-			<string>*</string>
-			<key>bInterfaceNumber</key>
-			<string>*</string>
-			<key>idProduct</key>
-			<integer>25446</integer>
-			<key>idVendor</key>
-			<integer>1423</integer>
-		</dict>
-		<key>ACR Card Reader SBC - 2</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>com_apple_driver_AppleUSBCardReaderSBC</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>Product Identification</key>
-				<string>Internal Memory Card Reader</string>
-				<key>USB Serial Number</key>
-				<string>000000009833</string>
-				<key>USB Vendor Name</key>
-				<string>Apple</string>
-			</dict>
-			<key>idProduct</key>
-			<integer>25446</integer>
-			<key>idVendor</key>
-			<integer>1423</integer>
-		</dict>
-		<key>ACR Card Reader SCSI - 2</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>IOSCSIPeripheralDeviceNub</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>Product Identification</key>
-				<string>SD Card Reader</string>
-				<key>Product Revision Level</key>
-				<string>1.00</string>
-				<key>Vendor Identification</key>
-				<string>APPLE</string>
-			</dict>
-			<key>Peripheral Device Type</key>
-			<integer>0</integer>
-			<key>Product Identification</key>
-			<string>Multi-Card</string>
-			<key>Vendor Identification</key>
-			<string>Generic-</string>
-		</dict>
-		<key>ACR Card Reader UMC - 2</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>com_apple_driver_AppleUSBCardReaderUMC</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>Physical Interconnect Location</key>
-				<string>Internal</string>
-				<key>idProduct</key>
-				<integer>33795</integer>
-				<key>idVendor</key>
-				<integer>1452</integer>
-			</dict>
-			<key>idProduct</key>
-			<integer>25446</integer>
-			<key>idVendor</key>
-			<integer>1423</integer>
-		</dict>
-		<key>RTL Card Reader Device - Realtek USB-CRW 2.0 0bda-0138</key>
+		<key>Card Reader Device - Realtek USB-CRW 2.0 0bda-0138</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -211,7 +48,7 @@
 			<key>idVendor</key>
 			<integer>3034</integer>
 		</dict>
-		<key>RTL Card Reader Inject</key>
+		<key>Card Reader Inject</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBCardReader</string>
@@ -250,7 +87,7 @@
 			<key>idVendor</key>
 			<integer>3034</integer>
 		</dict>
-		<key>RTL Card Reader Interface</key>
+		<key>Card Reader Interface</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -276,7 +113,7 @@
 			<key>idVendor</key>
 			<integer>3034</integer>
 		</dict>
-		<key>RTL Card Reader SBC</key>
+		<key>Card Reader SBC</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -298,7 +135,7 @@
 			<key>idVendor</key>
 			<integer>3034</integer>
 		</dict>
-		<key>RTL Card Reader SCSI</key>
+		<key>Card Reader SCSI</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -322,7 +159,7 @@
 			<key>Vendor Identification</key>
 			<string>Generic-</string>
 		</dict>
-		<key>RTL Card Reader UMC</key>
+		<key>Card Reader UMC</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -344,101 +181,7 @@
 			<key>idVendor</key>
 			<integer>3034</integer>
 		</dict>
-		<key>VGA Camera Device - USB2.0 UVC VGA WebCam 13d3-5126</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>IOUSBDevice</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>USB Product Name</key>
-				<string>FaceTime HD Camera (Built-in)</string>
-				<key>USB Serial Number</key>
-				<string>DJHB2F000LDH7FL0</string>
-				<key>USB Vendor Name</key>
-				<string>Apple Inc.</string>
-				<key>bcdDevice</key>
-				<integer>1302</integer>
-				<key>iManufacturer</key>
-				<integer>1</integer>
-				<key>iProduct</key>
-				<integer>2</integer>
-				<key>iSerialNumber</key>
-				<integer>3</integer>
-				<key>idProduct</key>
-				<integer>34057</integer>
-				<key>idVendor</key>
-				<integer>1452</integer>
-				<key>kSuspendPort</key>
-				<true/>
-				<key>non-removable</key>
-				<string>yes</string>
-			</dict>
-			<key>idProduct</key>
-			<integer>20774</integer>
-			<key>idVendor</key>
-			<integer>5075</integer>
-		</dict>
-		<key>VGA Camera Interface A</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>IOUSBInterface</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>USB Interface Name</key>
-				<string>FaceTime HD Camera (Built-in)</string>
-				<key>bcdDevice</key>
-				<integer>1302</integer>
-				<key>idProduct</key>
-				<integer>34057</integer>
-				<key>idVendor</key>
-				<integer>1452</integer>
-			</dict>
-			<key>bConfigurationValue</key>
-			<string>*</string>
-			<key>bInterfaceNumber</key>
-			<integer>0</integer>
-			<key>idProduct</key>
-			<integer>20774</integer>
-			<key>idVendor</key>
-			<integer>5075</integer>
-		</dict>
-		<key>VGA Camera Interface B</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>com.apple.driver.AppleUSBMergeNub</string>
-			<key>IOClass</key>
-			<string>AppleUSBMergeNub</string>
-			<key>IOProviderClass</key>
-			<string>IOUSBInterface</string>
-			<key>IOProviderMergeProperties</key>
-			<dict>
-				<key>USB Interface Name</key>
-				<string>FaceTime HD Camera (Built-in)</string>
-				<key>bcdDevice</key>
-				<integer>1302</integer>
-				<key>idProduct</key>
-				<integer>34057</integer>
-				<key>idVendor</key>
-				<integer>1452</integer>
-			</dict>
-			<key>bConfigurationValue</key>
-			<string>*</string>
-			<key>bInterfaceNumber</key>
-			<integer>1</integer>
-			<key>idProduct</key>
-			<integer>20774</integer>
-			<key>idVendor</key>
-			<integer>5075</integer>
-		</dict>
-		<key>FHD Camera Device - Laptop_Integrated_Webcam_FHD 1bcf-280a</key>
+		<key>FHD1 Camera Device - Laptop_Integrated_Webcam_FHD 1bcf-280a</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -476,7 +219,7 @@
 			<key>idVendor</key>
 			<integer>7119</integer>
 		</dict>
-		<key>FHD Camera Interface A</key>
+		<key>FHD1 Camera Interface A</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -504,7 +247,7 @@
 			<key>idVendor</key>
 			<integer>7119</integer>
 		</dict>
-		<key>FHD Camera Interface B</key>
+		<key>FHD1 Camera Interface B</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -531,6 +274,100 @@
 			<integer>10250</integer>
 			<key>idVendor</key>
 			<integer>7119</integer>
+		</dict>
+		<key>FHD2 Camera Device - Laptop_Integrated_Webcam_FHD 408-2fb1</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.driver.AppleUSBMergeNub</string>
+			<key>IOClass</key>
+			<string>AppleUSBMergeNub</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBDevice</string>
+			<key>IOProviderMergeProperties</key>
+			<dict>
+				<key>USB Product Name</key>
+				<string>FaceTime HD Camera (Built-in)</string>
+				<key>USB Serial Number</key>
+				<string>DJHB2F000LDH7FL0</string>
+				<key>USB Vendor Name</key>
+				<string>Apple Inc.</string>
+				<key>bcdDevice</key>
+				<integer>1302</integer>
+				<key>iManufacturer</key>
+				<integer>1</integer>
+				<key>iProduct</key>
+				<integer>2</integer>
+				<key>iSerialNumber</key>
+				<integer>3</integer>
+				<key>idProduct</key>
+				<integer>34057</integer>
+				<key>idVendor</key>
+				<integer>1452</integer>
+				<key>kSuspendPort</key>
+				<true/>
+				<key>non-removable</key>
+				<string>yes</string>
+			</dict>
+			<key>idProduct</key>
+			<integer>12209</integer>
+			<key>idVendor</key>
+			<integer>1032</integer>
+		</dict>
+		<key>FHD2 Camera Interface A</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.driver.AppleUSBMergeNub</string>
+			<key>IOClass</key>
+			<string>AppleUSBMergeNub</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOProviderMergeProperties</key>
+			<dict>
+				<key>USB Interface Name</key>
+				<string>FaceTime HD Camera (Built-in)</string>
+				<key>bcdDevice</key>
+				<integer>1302</integer>
+				<key>idProduct</key>
+				<integer>34057</integer>
+				<key>idVendor</key>
+				<integer>1452</integer>
+			</dict>
+			<key>bConfigurationValue</key>
+			<string>*</string>
+			<key>bInterfaceNumber</key>
+			<integer>0</integer>
+			<key>idProduct</key>
+			<integer>12209</integer>
+			<key>idVendor</key>
+			<integer>1032</integer>
+		</dict>
+		<key>FHD2 Camera Interface B</key>
+		<dict>
+			<key>CFBundleIdentifier</key>
+			<string>com.apple.driver.AppleUSBMergeNub</string>
+			<key>IOClass</key>
+			<string>AppleUSBMergeNub</string>
+			<key>IOProviderClass</key>
+			<string>IOUSBInterface</string>
+			<key>IOProviderMergeProperties</key>
+			<dict>
+				<key>USB Interface Name</key>
+				<string>FaceTime HD Camera (Built-in)</string>
+				<key>bcdDevice</key>
+				<integer>1302</integer>
+				<key>idProduct</key>
+				<integer>34057</integer>
+				<key>idVendor</key>
+				<integer>1452</integer>
+			</dict>
+			<key>bConfigurationValue</key>
+			<string>*</string>
+			<key>bInterfaceNumber</key>
+			<integer>1</integer>
+			<key>idProduct</key>
+			<integer>12209</integer>
+			<key>idVendor</key>
+			<integer>1032</integer>
 		</dict>
 		<key>HD1 Camera Device - Laptop_Integrated_Webcam_HD 1bcf-2980</key>
 		<dict>
@@ -730,23 +567,21 @@
 					<key>CodecID</key>
 					<integer>283902569</integer>
 					<key>ConfigData</key>
-					<data>ARcc8AEXHQABFx4AARcfQAEnHBABJx0BASceoAEnH5ABRxxAAUcdAQFHHhABRx+QAVccUAFXHUABVx4hAVcfAQFnHPABZx0AAWceAAFnH0ABhxwgAYcdMAGHHoEBhx8BAZcc8AGXHQABlx4AAZcfQAGnHPABpx0AAaceAAGnH0ABtxzwAbcdAAG3HgABtx9AAdcc8AHXHQAB1x4AAdcfQAHnHPAB5x0AAeceAAHnH0A=</data>
-					<key>FuncGroup</key>
-					<integer>1</integer>
-					<key>LayoutID</key>
-					<integer>1</integer>
-				</dict>
-				<dict>
-					<key>AFGLowPowerState</key>
-					<data>AwAAAA==</data>
-					<key>CodecID</key>
-					<integer>283902569</integer>
-					<key>ConfigData</key>
 					<data>ASccEAEnHQEBJx6gAScfkAFHHEABRx0BAUceEAFHH5ABdxzwAXcdAAF3HgABdx9AAYccIAGHHTABhx6BAYcfAQGXHPABlx0AAZceAAGXH0ABpxzwAacdAAGnHgABpx9AAbcc8AG3HQABtx4AAbcfQAHXHPAB1x0AAdceAAHXH0AB5xzwAecdAAHnHgAB5x9AAhccUAIXHUACFx4hAhcfAQ==</data>
 					<key>FuncGroup</key>
 					<integer>1</integer>
 					<key>LayoutID</key>
 					<integer>28</integer>
+				</dict>
+				<dict>
+					<key>CodecID</key>
+					<integer>283903589</integer>
+					<key>ConfigData</key>
+					<data>ASccEAEnHQEBJx6gAScfkAFXHCABVx0BAVceEAFXH5ABlxwwAZcdEAGXHiEBlx8BAaccHwGnHRABpx6BAacfAQG3HC8Btx0QAbceIQG3HwEB5xxAAecdEQHnHkUB5x8BAUcMAg==</data>
+					<key>FuncGroup</key>
+					<integer>1</integer>
+					<key>LayoutID</key>
+					<integer>65</integer>
 				</dict>
 			</array>
 			<key>IOClass</key>
