--- a/Clover/EFI/CLOVER/kexts/Other/CodecCommander.kext/Contents/Info.plist
+++ b/Clover/EFI/CLOVER/kexts/Other/CodecCommander.kext/Contents/Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>13E28</string>
+	<string>14A361c</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>CodecCommander</string>
 	<key>CFBundleGetInfoString</key>
-	<string>2.2.0, Copyright © 2013-2014 TimeWalker. All rights reserved.</string>
+	<string>2.2.1, Copyright © 2013-2014 TimeWalker. All rights reserved.</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.tw.CodecCommander</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -19,11 +19,11 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.0</string>
+	<string>2.2.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.2.0</string>
+	<string>2.2.1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -67,13 +67,13 @@
 					<key>Check Infinitely</key>
 					<true/>
 					<key>Check Interval</key>
-					<integer>5000</integer>
+					<integer>3000</integer>
 					<key>Codec Address Number</key>
 					<integer>0</integer>
 					<key>HDEF Device Location</key>
 					<string>1B</string>
 					<key>Send Delay</key>
-					<integer>500</integer>
+					<integer>300</integer>
 				</dict>
 				<key>Gigabyte</key>
 				<dict>
@@ -83,6 +83,8 @@
 						<false/>
 						<key>Codec Address Number</key>
 						<integer>2</integer>
+						<key>Update Nodes</key>
+						<false/>
 					</dict>
 				</dict>
 			</dict>
