--- a/Clover/OEM/Daughterboard/SLE/RealtekRTL8111.kext/Contents/Info.plist
+++ b/Clover/OEM/Daughterboard/SLE/RealtekRTL8111.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>13D65</string>
+	<string>14A361c</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -17,11 +17,11 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.0</string>
+	<string>1.2.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.2.0</string>
+	<string>1.2.3</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -29,9 +29,9 @@
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>13A595</string>
+	<string>12D75</string>
 	<key>DTSDKName</key>
-	<string>macosx10.9</string>
+	<string>macosx10.8</string>
 	<key>DTXcode</key>
 	<string>0501</string>
 	<key>DTXcodeBuild</key>
@@ -42,6 +42,8 @@
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.insanelymac.RealtekRTL8111</string>
+			<key>Driver_Version</key>
+			<string>1.2.3</string>
 			<key>IOClass</key>
 			<string>RTL8111</string>
 			<key>IOPCIMatch</key>
@@ -54,14 +56,18 @@
 			<string>RTL8111</string>
 			<key>Vendor</key>
 			<string>Realtek</string>
+			<key>disableASPM</key>
+			<true/>
 			<key>enableCSO6</key>
 			<true/>
 			<key>enableEEE</key>
 			<true/>
 			<key>enableTSO4</key>
 			<true/>
+			<key>enableTSO6</key>
+			<true/>
 			<key>intrMitigate</key>
-			<integer>53096</integer>
+			<integer>53080</integer>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
