--- a/Clover/EFI/CLOVER/kexts/Other/ACPIBatteryManager.kext/Contents/Info.plist
+++ b/Clover/EFI/CLOVER/kexts/Other/ACPIBatteryManager.kext/Contents/Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14A361c</string>
+	<string>14B17</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>ACPIBatteryManager</string>
 	<key>CFBundleGetInfoString</key>
-	<string>1.53, Copyright 2011 Apple Inc., RehabMan 2012</string>
+	<string>1.55, Copyright 2011 Apple Inc., RehabMan 2012</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.rehabman.driver.AppleSmartBatteryManager</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -19,25 +19,25 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.53</string>
+	<string>1.55</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.53</string>
+	<string>1.55</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>5A2034a</string>
+	<string>6A2008a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>12D75</string>
+	<string>13F26</string>
 	<key>DTSDKName</key>
-	<string>macosx10.8</string>
+	<string>macosx10.9</string>
 	<key>DTXcode</key>
-	<string>0501</string>
+	<string>0611</string>
 	<key>DTXcodeBuild</key>
-	<string>5A2034a</string>
+	<string>6A2008a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>ACPI AC Adapter</key>
@@ -67,8 +67,10 @@
 			<integer>1000</integer>
 			<key>IOProviderClass</key>
 			<string>IOACPIPlatformDevice</string>
+			<key>RM,Build</key>
+			<string>Release-timewalker</string>
 			<key>RM,Version</key>
-			<string>ACPIBatteryManager 1.53</string>
+			<string>ACPIBatteryManager 1.55</string>
 			<key>UseExtendedBatteryInformationMethod</key>
 			<true/>
 			<key>UseExtraBatteryInformationMethod</key>
