--- a/Common Files/Extensions/CodecCommander.kext/Contents/Info.plist
+++ b/Common Files/Extensions/CodecCommander.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14A361c</string>
+	<string>14B17</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -27,17 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>5A2034a</string>
+	<string>6A2008a</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>13A595</string>
+	<string>13F26</string>
 	<key>DTSDKName</key>
 	<string>macosx10.9</string>
 	<key>DTXcode</key>
-	<string>0501</string>
+	<string>0611</string>
 	<key>DTXcodeBuild</key>
-	<string>5A2034a</string>
+	<string>6A2008a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>CodecCommander</key>
@@ -52,6 +52,8 @@
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
 			<string>IOKit</string>
+			<key>IOUserClientClass</key>
+			<string>CodecCommanderClient</string>
 			<key>Platform Profile</key>
 			<dict>
 				<key>ASUS</key>
@@ -70,10 +72,14 @@
 					<integer>3000</integer>
 					<key>Codec Address Number</key>
 					<integer>0</integer>
+					<key>Custom Commands</key>
+					<array/>
 					<key>HDEF Device Location</key>
 					<string>1B</string>
 					<key>Send Delay</key>
 					<integer>300</integer>
+					<key>Update Nodes</key>
+					<true/>
 				</dict>
 				<key>Gigabyte</key>
 				<dict>
@@ -87,11 +93,29 @@
 						<false/>
 					</dict>
 				</dict>
+				<key>Lenovo</key>
+				<dict>
+					<key>Cherry 4A Touch</key>
+					<string>U430</string>
+					<key>U430</key>
+					<dict>
+						<key>Check Infinitely</key>
+						<true/>
+						<key>Check Interval</key>
+						<integer>1000</integer>
+						<key>Send Delay</key>
+						<integer>100</integer>
+					</dict>
+				</dict>
 			</dict>
+			<key>RM,Build</key>
+			<string>Release-timewalker</string>
+			<key>RM,Version</key>
+			<string>CodecCommander 2.2.1</string>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013-2014 TimeWalker. All rights reserved.</string>
+	<string>Copyright © 2013-2014 TimeWalker/RehabMan. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IOAudioFamily</key>
@@ -107,5 +131,7 @@
 		<key>com.apple.kpi.unsupported</key>
 		<string>9.0.0</string>
 	</dict>
+	<key>Source Code</key>
+	<string>https://github.com/RehabMan/EAPD-Codec-Commander</string>
 </dict>
 </plist>
