--- a/Common Files/Extensions/VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Keyboard.kext/Contents/Info.plist
+++ b/Common Files/Extensions/VoodooPS2Controller.kext/Contents/PlugIns/VoodooPS2Keyboard.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14A361c</string>
+	<string>14A388a</string>
 	<key>CFBundleExecutable</key>
 	<string>VoodooPS2Keyboard</string>
 	<key>CFBundleGetInfoString</key>
@@ -127,13 +127,11 @@
 						<key>Breakless PS2</key>
 						<array>
 							<string>e01e;Touchpad Fn+f3 is breakless</string>
-							<string>e06e;REVIEW: temporary for case that macro inversion doesn't work...</string>
+							<string>e06e;REVIEW: temporary for case that macro inversion does not work...</string>
 						</array>
 						<key>Custom ADB Map</key>
 						<array>
 							<string>e009=83;Dell Support to Launchpad</string>
-							<string>e0f1=90;Call brightens up w RKA1 for special mode</string>
-							<string>e0f2=91;Call brightens down w RKA2 for special mode</string>
 							<string>e06e=70;Map vidmirror key for special mode default is adb90</string>
 						</array>
 						<key>Custom PS2 Map</key>
@@ -160,8 +158,8 @@
 							<string>3b=e06e;Map vidmirror key to f1</string>
 							<string>3c=e0f0;Map radio toggle action from EC query to f2</string>
 							<string>3d=e037;Map touchpad toggle button to f3</string>
-							<string>3e=e0f2;Map acpi RKA2 to f4 brightness down</string>
-							<string>3f=e0f1;Map acpi RKA1 to f5 brightness up</string>
+							<string>3e=e005;Map brightness down to f4 </string>
+							<string>3f=e006;Map brightness up to f5</string>
 							<string>40=e0f3;Map acpi RKA3 to f6 keyboard backlight</string>
 							<string>;Fn+f7 no macro</string>
 							<string>42=e010</string>
@@ -204,15 +202,9 @@
 						<array>
 							<string>;This section maps ps2 codes (packet format) received quickly (macros) into fake ps2 codes (packet format)</string>
 							<string>;Fn+F1</string>
-							<data>
-							//8CbgAAAAACWwEZ
-							</data>
-							<data>
-							//8C7gAAAAAC2wGZ
-							</data>
-							<data>
-							//8C7gAAAAABmQLb
-							</data>
+							<data>//8CbgAAAAACWwEZ</data>
+							<data>//8C7gAAAAAC2wGZ</data>
+							<data>//8C7gAAAAABmQLb</data>
 						</array>
 						<key>MaximumMacroTime</key>
 						<integer>35000000</integer>
@@ -637,47 +629,23 @@
 						<array>
 							<string>;This section maps ps2 codes (packet format) received quickly (macros) into fake ps2 codes (packet format)</string>
 							<string>;Fn+F4</string>
-							<data>
-							//8CZAAAAAABOAE+
-							</data>
-							<data>
-							//8C5AAAAAABvgG4
-							</data>
+							<data>//8CZAAAAAABOAE+</data>
+							<data>//8C5AAAAAABvgG4</data>
 							<string>;F5 (without Fn)</string>
-							<data>
-							//8CZQEAAAABPw==
-							</data>
-							<data>
-							//8C5QEAAAABvw==
-							</data>
+							<data>//8CZQEAAAABPw==</data>
+							<data>//8C5QEAAAABvw==</data>
 							<string>;Fn+Ctrl+F6</string>
-							<data>
-							//8CJwAD//8CZg==
-							</data>
-							<data>
-							//8CpwAD//8C5g==
-							</data>
+							<data>//8CJwAD//8CZg==</data>
+							<data>//8CpwAD//8C5g==</data>
 							<string>;Ctrl+F6</string>
-							<data>
-							//8CJwAD//8CQA==
-							</data>
-							<data>
-							//8CpwAD//8CwA==
-							</data>
+							<data>//8CJwAD//8CQA==</data>
+							<data>//8CpwAD//8CwA==</data>
 							<string>;Fn+F8</string>
-							<data>
-							//8CaAAAAAACHQE4AQ8=
-							</data>
-							<data>
-							//8C6AAAAAABjwG4Ap0=
-							</data>
+							<data>//8CaAAAAAACHQE4AQ8=</data>
+							<data>//8C6AAAAAABjwG4Ap0=</data>
 							<string>;Fn+F10</string>
-							<data>
-							//8CagAAAAACWwEZ
-							</data>
-							<data>
-							//8C6gAAAAABmQLb
-							</data>
+							<data>//8CagAAAAACWwEZ</data>
+							<data>//8C6gAAAAABmQLb</data>
 						</array>
 						<key>Macro Translation</key>
 						<array>
@@ -688,6 +656,20 @@
 					</dict>
 					<key>U430</key>
 					<string>Haswell-Ideapad</string>
+				</dict>
+				<key>SECCSD</key>
+				<dict>
+					<key>LH43STAR</key>
+					<string>SamsungKeys</string>
+					<key>SamsungKeys</key>
+					<dict>
+						<key>Breakless PS2</key>
+						<array>
+							<string>e020</string>
+							<string>e02e</string>
+							<string>e030</string>
+						</array>
+					</dict>
 				</dict>
 			</dict>
 		</dict>
